--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "start": "npx prisma migrate deploy && next start",
         "lint": "next lint",
         "test": "jest",
-        "worker": "npx --yes bun --tsconfig-override ./tsconfig.worker.json src/workers/launch.ts",
-        "dev:migrate": "npx --yes bun src/seed/migrateUserPositionsBeforeCutoff/index.ts"
+        "worker": "npx --yes bun --tsconfig-override ./tsconfig.worker.json src/workers/launch.ts"
     },
     "dependencies": {
         "@clerk/nextjs": "^4.23.3",
@@ -59,7 +58,6 @@
         "ioredis": "^5.3.2",
         "lodash": "^4.17.21",
         "lucide-react": "^0.268.0",
-        "mongodb": "^5.7.0",
         "next": "^13.5.2",
         "object-hash": "^3.0.0",
         "postcss": "8.4.24",
