chore: update dev instructions

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,14 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 RESEND_KEY=
 NOTIFICATIONS_SENDER_EMAIL=
+ALPACA_CLIENT_ID=
+ALPACA_CLIENT_SECRET=
 
 # Default values (change if needed)
 NODE_ENV=development
 SQLITE_PRISMA_URL=file:../dev.sqlite
 REDIS_URL=redis://localhost:6379
-NEXT_PUBLIC_BASE_URL='http://localhost:3000'
+NEXT_PUBLIC_BASE_URL='http://localhost:3000' # If you run into an error with Alpaca's redirect uri, use a service like ngrok to get a public URL that tunnels to your localhost
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
@@ -17,8 +19,6 @@ NOTIFICATIONS_BCC_EMAIL=
 
 # ONLY REQUIRED FOR PRODUCTION
 # These services are mocked in development, so you don't need to fill them
-ALPACA_CLIENT_ID=
-ALPACA_CLIENT_SECRET=
 FINNHUB_FREE_KEY=
 FINNHUB_API_KEY=
 MUSAFFA_CLIENT_ID=
